--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -6652,9 +6652,9 @@
 
                 // 단위/단가/금액은 아직 선택 안 됨
                 row.querySelector('.unit-cell').textContent = '-';
-                row.querySelector('.price-cell').textContent = '-';
+                row.querySelector('.price-cell').innerHTML = '<span style="width:100%; text-align:center">-</span>';
                 row.querySelector('.price-cell').dataset.price = '0';
-                row.querySelector('.amount-cell').textContent = '-';
+                row.querySelector('.amount-cell').innerHTML = '<span style="width:100%; text-align:center">-</span>';
             } else if (sameNameItems.length === 1) {
                 // 같은 품명이 하나만 있으면 자동 입력
                 const item = sameNameItems[0];
@@ -6676,9 +6676,9 @@
 
                 row.querySelector('.spec-cell').textContent = spec;
                 row.querySelector('.unit-cell').textContent = unit;
-                row.querySelector('.price-cell').textContent = formatNumber(price);
+                row.querySelector('.price-cell').innerHTML = price > 0 ? `<span>₩</span><span>${formatNumber(price)}</span>` : '<span style="width:100%; text-align:center">-</span>';
                 row.querySelector('.price-cell').dataset.price = price;
-                row.querySelector('.amount-cell').textContent = formatNumber(amount);
+                row.querySelector('.amount-cell').innerHTML = amount > 0 ? `<span>₩</span><span>${formatNumber(amount)}</span>` : '<span style="width:100%; text-align:center">-</span>';
             } else {
                 // 항목을 찾지 못한 경우
                 resetEstRowValues(row);
@@ -6716,9 +6716,9 @@
 
             if (!option || !option.value) {
                 row.querySelector('.unit-cell').textContent = '-';
-                row.querySelector('.price-cell').textContent = '-';
+                row.querySelector('.price-cell').innerHTML = '<span style="width:100%; text-align:center">-</span>';
                 row.querySelector('.price-cell').dataset.price = '0';
-                row.querySelector('.amount-cell').textContent = '-';
+                row.querySelector('.amount-cell').innerHTML = '<span style="width:100%; text-align:center">-</span>';
                 return;
             }
 
@@ -7611,21 +7611,7 @@
                     }
                 });
 
-                // 단가/금액에 ₩ 기호 추가 (인쇄용)
-                clonedElement.querySelectorAll('.estimate-table tbody tr').forEach(tr => {
-                    const priceCell = tr.querySelector('.price-cell');
-                    const amountCell = tr.querySelector('.amount-cell');
 
-                    if (priceCell && priceCell.textContent !== '-') {
-                        const priceValue = priceCell.textContent;
-                        priceCell.innerHTML = `<span class="won-amount"><span class="won-symbol">₩</span><span>${priceValue}</span></span>`;
-                    }
-
-                    if (amountCell && amountCell.textContent !== '-') {
-                        const amountValue = amountCell.textContent;
-                        amountCell.innerHTML = `<span class="won-amount"><span class="won-symbol">₩</span><span>${amountValue}</span></span>`;
-                    }
-                });
             }
 
             // 인쇄용 HTML 생성
